--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
 TableTraitsUtils = "382cd787-c1b6-5bf2-a167-d5b971a19bda"
+Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
 URIParser = "30578b45-9adc-5946-b283-645ec420af67"
 
 [compat]
@@ -39,6 +40,7 @@ Setfield = "0.4, 0.5, 0.6"
 TableTraits = "0.3.1, 0.4, 1"
 TableTraitsUtils = "1"
 URIParser = "0.4"
+Vega = "0.1"
 julia = "1.3"
 
 [extras]
