Fix issues identified by Julia Package Butler

--- a/.github/workflows/jlpkgbutler-tagbot-workflow.yml
+++ b/.github/workflows/jlpkgbutler-tagbot-workflow.yml
@@ -1,7 +1,7 @@
 name: TagBot
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: 0 * * * *
 jobs:
   TagBot:
     runs-on: ubuntu-latest
@@ -10,4 +10,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ssh: ${{ secrets.JLPKGBUTLER_TOKEN }}
-          branches: false
+          branches: true
