Set version to v2.1.3

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "VegaLite"
 uuid = "112f6efa-9a02-5b7d-90c0-432ed331239a"
-version = "2.1.3-DEV"
+version = "2.1.3"
 
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
