--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 TableTraits = "0.3.1, 0.4, 1"
 IteratorInterfaceExtensions = "0.1.1, 1"
 JSON = "0.19, 0.20, 0.21"
-Vega = "0.1"
+Vega = "0.1, 1"
 DataStructures = "0.17"
 JSONSchema = "0.1, 0.2"
 NodeJS = "0.5.1, 0.6, 1"
