--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ DataValues = "e7dc6d0d-1eca-5fa6-8ad6-5aecde8b7ea5"
 FilePaths = "8fc22ac5-c921-52a6-82fd-178b2807b824"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 URIParser = "30578b45-9adc-5946-b283-645ec420af67"
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 
 [extras]
 VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
@@ -32,7 +33,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 TableTraits = "0.3.1, 0.4, 1"
 IteratorInterfaceExtensions = "0.1.1, 1"
 JSON = "0.19, 0.20, 0.21"
-Vega = "0.1, 1"
+Vega = "0.1, 1, 2"
 DataStructures = "0.17"
 JSONSchema = "0.1, 0.2"
 NodeJS = "0.5.1, 0.6, 1"
