--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "VegaLite"
 uuid = "112f6efa-9a02-5b7d-90c0-432ed331239a"
-version = "2.2.1-DEV"
+version = "2.3.0"
 
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
@@ -11,6 +11,7 @@ IteratorInterfaceExtensions = "82899510-4779-5014-852e-03e436cf321d"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 JSONSchema = "7d188eb4-7ad8-530c-ae41-71a32a6d4692"
 NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
@@ -21,7 +22,6 @@ DataValues = "e7dc6d0d-1eca-5fa6-8ad6-5aecde8b7ea5"
 FilePaths = "8fc22ac5-c921-52a6-82fd-178b2807b824"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 URIParser = "30578b45-9adc-5946-b283-645ec420af67"
-Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 
 [extras]
 VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
