--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,10 @@ uuid = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 version = "2.6.1-DEV"
 
 [deps]
-Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
-DataValues = "e7dc6d0d-1eca-5fa6-8ad6-5aecde8b7ea5"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-FilePaths = "8fc22ac5-c921-52a6-82fd-178b2807b824"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+TableTraits = "3783bdb8-4a98-5b6b-af9a-565f29a5fe9c"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 IteratorInterfaceExtensions = "82899510-4779-5014-852e-03e436cf321d"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
@@ -31,10 +29,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 
 [compat]
-DataStructures = "0.17"
-DataValues = "0.4.4"
-FileIO = "1.0.1"
-FilePaths = "0.7, 0.8"
+TableTraits = "0.3.1, 0.4, 1"
 IteratorInterfaceExtensions = "0.1.1, 1"
 JSON = "0.19, 0.20, 0.21"
 Vega = "0.1, 1, 2"
@@ -49,12 +44,10 @@ FilePaths = "0.7, 0.8"
 URIParser = "0.4"
 Vega = "0.1, 1, 2"
 julia = "1.3"
-
-[extras]
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
+DataValues = "0.4.4"
+FilePaths = "0.7, 0.8"
+Setfield = "0.4, 0.5, 0.6"
+URIParser = "0.4"
 
 [targets]
 test = ["VegaDatasets", "Dates", "Test", "DataFrames", "Setfield"]
