--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 
 [compat]
 TableTraits = "0.3.1, 0.4, 1"
@@ -43,4 +44,4 @@ FilePaths = "0.7, 0.8"
 URIParser = "0.4"
 
 [targets]
-test = ["VegaDatasets", "Dates", "Test", "DataFrames"]
+test = ["VegaDatasets", "Dates", "Test", "DataFrames", "Setfield"]
