--- a/Project.toml
+++ b/Project.toml
@@ -27,12 +27,13 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 
 [compat]
 TableTraits = "0.3.1, 0.4, 1"
 IteratorInterfaceExtensions = "0.1.1, 1"
 JSON = "0.19, 0.20, 0.21"
-Vega = "0.1, 1, 2"
+Vega = "2.4"
 DataStructures = "0.17, 0.18"
 NodeJS = "0.5.1, 0.6, 1"
 MacroTools = "0.4.4, 0.5"
@@ -44,4 +45,4 @@ FilePaths = "0.7, 0.8"
 URIParser = "0.4"
 
 [targets]
-test = ["VegaDatasets", "Dates", "Test", "DataFrames", "Setfield"]
+test = ["VegaDatasets", "Dates", "Test", "DataFrames", "Setfield", "TestItemRunner"]
