--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Vega = "239c3e63-733f-47ad-beb7-a12fde22c578"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
-NodeJS = "2bd173c7-0d6d-553b-b6af-13a54713934c"
+NodeJS_16_jll = "a4b94fbf-73f5-58ff-888d-48a8396e17f6"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -35,7 +35,7 @@ IteratorInterfaceExtensions = "0.1.1, 1"
 JSON = "0.19, 0.20, 0.21"
 Vega = "2.4"
 DataStructures = "0.17, 0.18"
-NodeJS = "0.5.1, 0.6, 1"
+NodeJS_16_jll = "16"
 MacroTools = "0.4.4, 0.5"
 FileIO = "1.0.1"
 TableTraitsUtils = "1"
